Adding Centos10 support
Summary: Adding Centos10 Support for DC Perf

Differential Revision: D102403401